@@ -10,13 +10,14 @@
 package org.jetbrains.kotlinx.lincheck
 
 import kotlinx.coroutines.*
-import org.jetbrains.kotlinx.lincheck.execution.*
+import sun.nio.ch.lincheck.EventTracker
+import sun.nio.ch.lincheck.TestThread
 import org.jetbrains.kotlinx.lincheck.runner.*
 import org.jetbrains.kotlinx.lincheck.strategy.managed.*
+import org.jetbrains.kotlinx.lincheck.transformation.LincheckClassFileTransformer
 import org.jetbrains.kotlinx.lincheck.verifier.*
-import org.objectweb.asm.*
-import org.objectweb.asm.commons.*
-import java.io.*
+import java.io.PrintWriter
+import java.io.StringWriter
 import java.lang.ref.*
 import java.lang.reflect.*
 import java.lang.reflect.Method
@@ -29,8 +30,6 @@ fun chooseSequentialSpecification(sequentialSpecificationByUser: Class<*>?, test
     if (sequentialSpecificationByUser === DummySequentialSpecification::class.java || sequentialSpecificationByUser == null) testClass
     else sequentialSpecificationByUser
 
-internal fun executeActor(testInstance: Any, actor: Actor) = executeActor(testInstance, actor, null)
-
 /**
  * Executes the specified actor on the sequential specification instance and returns its result.
  */
@@ -42,7 +41,6 @@ internal fun executeActor(
     try {
         val m = getMethod(instance, actor.method)
         val args = (if (actor.isSuspendable) actor.arguments + completion else actor.arguments)
-            .map { it.convertForLoader(instance.javaClass.classLoader) }
         val res = m.invoke(instance, *args.toTypedArray())
         return if (m.returnType.isAssignableFrom(Void.TYPE)) VoidResult else createLincheckResult(res)
     } catch (invE: Throwable) {
@@ -64,47 +62,6 @@ internal fun executeActor(
     }
 }
 
-internal inline fun executeValidationFunctions(instance: Any, validationFunctions: List<Method>,
-                                               onError: (functionName: String, exception: Throwable) -> Unit) {
-    for (f in validationFunctions) {
-        val validationException = executeValidationFunction(instance, f)
-        if (validationException != null) {
-            onError(f.name, validationException)
-            return
-        }
-    }
-}
-
-private fun executeValidationFunction(instance: Any, validationFunction: Method): Throwable? {
-    val m = getMethod(instance, validationFunction)
-    try {
-        m.invoke(instance)
-    } catch (e: Exception) { // We don't catch any Errors - the only correct way is to re-throw them
-        // There are some exception types that can be thrown from this method:
-        return when (e) {
-            // It's our fault if we supplied null instead of method or instance
-            is NullPointerException -> LincheckInternalBugException(e)
-            // It's our fault as it can appear if this validation function has parameters, but we had to check it before
-            is IllegalArgumentException -> LincheckInternalBugException(e)
-            // Something wrong with access to some classes, just report it
-            is IllegalAccessException -> e
-            // Regular validation function exception
-            is InvocationTargetException -> {
-                val validationException = e.targetException
-                val wrapperExceptionStackTraceLength = e.stackTrace.size
-                // drop stacktrace related to Lincheck call, keeping only stacktrace starting from validation function call
-                validationException.stackTrace = validationException.stackTrace.dropLast(wrapperExceptionStackTraceLength).toTypedArray()
-                validationException
-            }
-            else -> LincheckInternalBugException(e)
-        }
-    }
-    return null
-}
-
-@Suppress("UNCHECKED_CAST")
-internal fun <T> Class<T>.normalize() = LinChecker::class.java.classLoader.loadClass(name) as Class<T>
-
 private val methodsCache = WeakHashMap<Class<*>, WeakHashMap<Method, WeakReference<Method>>>()
 
 /**
@@ -121,7 +78,7 @@ internal fun getMethod(instance: Any, method: Method): Method {
 }
 
 /**
- * Finds a method withe the specified [name] and (parameters)[parameterTypes]
+ * Finds a method with the specified [name] and (parameters)[parameterTypes]
  * ignoring the difference in class loaders for these parameter types.
  */
 private fun Class<out Any>.getMethod(name: String, parameterTypes: Array<Class<out Any>>): Method =
@@ -136,7 +93,7 @@ private fun Class<out Any>.getMethod(name: String, parameterTypes: Array<Class<o
  *
  * Instances of [Throwable] are represented as [ExceptionResult].
  *
- * The special [COROUTINE_SUSPENDED] value returned when some coroutine suspended it's execution
+ * The special [COROUTINE_SUSPENDED] value returned when some coroutine suspended its execution
  * is represented as [NoResult].
  *
  * Success values of [kotlin.Result] instances are represented as either [VoidResult] or [ValueResult].
@@ -147,7 +104,7 @@ internal fun createLincheckResult(res: Any?, wasSuspended: Boolean = false) = wh
     res != null && res is Throwable -> ExceptionResult.create(res, wasSuspended)
     res === COROUTINE_SUSPENDED -> Suspended
     res is kotlin.Result<Any?> -> res.toLinCheckResult(wasSuspended)
-    else -> ValueResult(res.convertForLoader(LinChecker::class.java.classLoader), wasSuspended)
+    else -> ValueResult(res, wasSuspended)
 }
 
 private fun kotlin.Result<Any?>.toLinCheckResult(wasSuspended: Boolean) =
@@ -156,7 +113,7 @@ private fun kotlin.Result<Any?>.toLinCheckResult(wasSuspended: Boolean) =
             is Unit -> if (wasSuspended) SuspendedVoidResult else VoidResult
             // Throwable was returned as a successful result
             is Throwable -> ValueResult(value::class.java, wasSuspended)
-            else -> ValueResult(value.convertForLoader(LinChecker::class.java.classLoader), wasSuspended)
+            else -> ValueResult(value, wasSuspended)
         }
     } else ExceptionResult.create(exceptionOrNull()!!, wasSuspended)
 
@@ -181,7 +138,18 @@ internal class StoreExceptionHandler :
 internal fun <T> CancellableContinuation<T>.cancelByLincheck(promptCancellation: Boolean): CancellationResult {
     val exceptionHandler = context[CoroutineExceptionHandler] as StoreExceptionHandler
     exceptionHandler.exception = null
-    val cancelled = cancel(cancellationByLincheckException)
+
+    val currentThread = Thread.currentThread() as? TestThread
+    val inIgnoredSection = currentThread?.inIgnoredSection ?: false
+    // We must exit the ignored section here to analyze the cancellation handler logic.
+    // After that, we need to enter the ignored section back.
+    currentThread?.inIgnoredSection = false
+    val cancelled = try {
+        cancel(cancellationByLincheckException)
+    } finally {
+        currentThread?.inIgnoredSection = inIgnoredSection
+    }
+
     exceptionHandler.exception?.let {
         throw it.cause!! // let's throw the original exception, ignoring the internal coroutines details
     }
@@ -204,153 +172,27 @@ fun <T> kotlin.Result<T>.cancelledByLincheck() = exceptionOrNull() === cancellat
 
 private val cancellationByLincheckException = Exception("Cancelled by lincheck")
 
-object CancellableContinuationHolder {
-    var storedLastCancellableCont: CancellableContinuation<*>? = null
-}
-
-fun storeCancellableContinuation(cont: CancellableContinuation<*>) {
-    val t = Thread.currentThread()
-    if (t is FixedActiveThreadsExecutor.TestThread) {
-        t.cont = cont
-    } else {
-        CancellableContinuationHolder.storedLastCancellableCont = cont
-    }
-}
-
-internal fun ExecutionScenario.convertForLoader(loader: ClassLoader) = ExecutionScenario(
-    initExecution,
-    parallelExecution.map { actors ->
-        actors.map { a ->
-            val args = a.arguments.map { it.convertForLoader(loader) }
-            // the original `isSuspendable` is used here since `KFunction.isSuspend` fails on transformed classes
-            Actor(
-                method = a.method.convertForLoader(loader),
-                arguments = args,
-                cancelOnSuspension = a.cancelOnSuspension,
-                allowExtraSuspension = a.allowExtraSuspension,
-                blocking = a.blocking,
-                causesBlocking = a.causesBlocking,
-                promptCancellation = a.promptCancellation,
-                isSuspendable = a.isSuspendable
-            )
-        }
-    },
-    postExecution
-)
-
-internal fun ExecutionResult.convertForLoader(loader: ClassLoader) = ExecutionResult(
-        initResults.map { it.convertForLoader(loader) },
-        afterInitStateRepresentation,
-        parallelResultsWithClock.map { results -> results.map { it.convertForLoader(loader) } },
-        afterParallelStateRepresentation,
-        postResults.map { it.convertForLoader(loader) },
-        afterPostStateRepresentation
-)
-
-/**
- * Finds the same method but loaded by the specified (class loader)[loader],
- * the signature can be changed according to the [TransformationClassLoader]'s remapper.
- */
-private fun Method.convertForLoader(loader: ClassLoader): Method {
-    if (loader !is TransformationClassLoader) return this
-    val clazz = declaringClass.convertForLoader(loader)
-    val parameterTypes = parameterTypes.map { it.convertForLoader(loader) }
-    return clazz.getDeclaredMethod(name, *parameterTypes.toTypedArray())
-}
-
-private fun Class<*>.convertForLoader(loader: TransformationClassLoader): Class<*> =
-    if (isPrimitive) this else loader.loadClass(loader.remapClassName(name))
-
-private fun ResultWithClock.convertForLoader(loader: ClassLoader): ResultWithClock =
-        ResultWithClock(result.convertForLoader(loader), clockOnStart)
-
-private fun Result.convertForLoader(loader: ClassLoader): Result = when (this) {
-    is ValueResult -> ValueResult(value.convertForLoader(loader), wasSuspended)
-    else -> this // does not need to be transformed
-}
-
-/**
- * Move the value from its current class loader to the specified [loader].
- * For primitive values, does nothing.
- * Non-primitive values need to be [Serializable] for this to succeed.
- */
-internal fun Any?.convertForLoader(loader: ClassLoader) = when {
-    this == null -> null
-    this::class.java.classLoader == null -> this // primitive class, no need to convert
-    this::class.java.classLoader == loader -> this // already in this loader
-    loader is TransformationClassLoader && !loader.shouldBeTransformed(this.javaClass) -> this
-    this is Serializable -> serialize().run { deserialize(loader) }
-    else -> error("The result class should either be always loaded by the system class loader and not be transformed," +
-                  " or implement Serializable interface.")
-}
-
-internal fun Any?.serialize(): ByteArray = ByteArrayOutputStream().use {
-    val oos = ObjectOutputStream(it)
-    oos.writeObject(this)
-    it.toByteArray()
-}
-
-internal fun ByteArray.deserialize(loader: ClassLoader) = ByteArrayInputStream(this).use {
-    CustomObjectInputStream(loader, it).run { readObject() }
-}
-
-/**
- * ObjectInputStream that uses custom class loader.
- */
-private class CustomObjectInputStream(val loader: ClassLoader, inputStream: InputStream) : ObjectInputStream(inputStream) {
-    override fun resolveClass(desc: ObjectStreamClass): Class<*> {
-        // add `TRANSFORMED_PACKAGE_NAME` prefix in case of TransformationClassLoader and remove otherwise
-        val className = if (loader is TransformationClassLoader) loader.remapClassName(desc.name)
-                        else desc.name.removePrefix(TransformationClassLoader.REMAPPED_PACKAGE_CANONICAL_NAME)
-        return Class.forName(className, true, loader)
-    }
-}
-
 /**
  * Collects the current thread dump and keeps only those
  * threads that are related to the specified [runner].
  */
 internal fun collectThreadDump(runner: Runner) = Thread.getAllStackTraces().filter { (t, _) ->
-    t is FixedActiveThreadsExecutor.TestThread && t.runnerHash == runner.hashCode()
+    t is TestThread && runner.isCurrentRunnerThread(t)
 }
 
-/**
- * This method helps to encapsulate remapper logic from strategy interface.
- * The remapper is determined based on the used transformers.
- */
-internal fun getRemapperByTransformers(classTransformers: List<ClassVisitor>): Remapper? =
-    when {
-        classTransformers.any { it is ManagedStrategyTransformer } -> JavaUtilRemapper()
-        else -> null
-    }
-
 internal val String.canonicalClassName get() = this.replace('/', '.')
-internal val String.internalClassName get() = this.replace('.', '/')
 
 internal fun exceptionCanBeValidExecutionResult(exception: Throwable): Boolean {
     return exception !is ThreadDeath && // used to stop thread in FixedActiveThreadsExecutor by calling thread.stop method
             exception !is InternalLincheckTestUnexpectedException &&
-            exception !is ForcibleExecutionFinishException &&
-            !isIllegalAccessOfUnsafeDueToJavaVersion(exception)
+            exception !is ForcibleExecutionFinishError
 }
 
-internal fun wrapInvalidAccessFromUnnamedModuleExceptionWithDescription(throwable: Throwable): Throwable {
-    if (isIllegalAccessOfUnsafeDueToJavaVersion(throwable)) return RuntimeException(ADD_OPENS_MESSAGE, throwable)
-
-    return throwable
+internal val Throwable.text: String get() {
+    val writer = StringWriter()
+    printStackTrace(PrintWriter(writer))
+    return writer.buffer.toString()
 }
-
-internal fun isIllegalAccessOfUnsafeDueToJavaVersion(exception: Throwable): Boolean {
-    return exception is IllegalAccessException && exception.message?.contains("to unnamed module") ?: false
-}
-
-
-internal const val ADD_OPENS_MESSAGE =
-    "It seems that you use Java 9+ and the code uses Unsafe or similar constructions that are not accessible from unnamed modules.\n" +
-            "Please add the following lines to your test running configuration:\n" +
-            "--add-opens java.base/jdk.internal.misc=ALL-UNNAMED\n" +
-            "--add-exports java.base/jdk.internal.util=ALL-UNNAMED\n" +
-            "--add-exports java.base/sun.security.action=ALL-UNNAMED"
 
 /**
  * Utility exception for test purposes.
@@ -364,16 +206,29 @@ internal object InternalLincheckTestUnexpectedException : Exception()
  */
 internal class LincheckInternalBugException(cause: Throwable): Exception(cause)
 
-internal fun stackTraceRepresentation(stackTrace: Array<StackTraceElement>): List<String> {
-    return transformStackTraceBackFromRemapped(stackTrace).map { it.toString() }.filter { line ->
-        "org.jetbrains.kotlinx.lincheck.strategy" !in line
-                && "org.jetbrains.kotlinx.lincheck.runner" !in line
-                && "org.jetbrains.kotlinx.lincheck.UtilsKt" !in line
-    }
-}
+// We use receivers here in order not to use this function instead of `invokeInIgnoredSection` in the transformation logic.
+@Suppress("UnusedReceiverParameter")
+internal inline fun<R> EventTracker.runInIgnoredSection(block: () -> R): R =  runInIgnoredSection(Thread.currentThread(), block)
+@Suppress("UnusedReceiverParameter")
+internal inline fun<R> FixedActiveThreadsExecutor.runInIgnoredSection(block: () -> R): R =  runInIgnoredSection(Thread.currentThread(), block)
+@Suppress("UnusedReceiverParameter")
+internal inline fun<R> ParallelThreadsRunner.runInIgnoredSection(block: () -> R): R =  runInIgnoredSection(Thread.currentThread(), block)
+@Suppress("UnusedReceiverParameter")
+internal inline fun<R> LincheckClassFileTransformer.runInIgnoredSection(block: () -> R): R =  runInIgnoredSection(Thread.currentThread(), block)
 
-internal fun transformStackTraceBackFromRemapped(stackTrace: Array<StackTraceElement>) = stackTrace.map {
-    StackTraceElement(it.className.removePrefix(TransformationClassLoader.REMAPPED_PACKAGE_CANONICAL_NAME), it.methodName, it.fileName, it.lineNumber)
-}
+@Suppress("UnusedReceiverParameter")
+internal inline fun<R> ExecutionClassLoader.runInIgnoredSection(block: () -> R): R =  runInIgnoredSection(Thread.currentThread(), block)
+
+private inline fun <R> runInIgnoredSection(currentThread: Thread, block: () -> R): R =
+    if (currentThread is TestThread && currentThread.inTestingCode && !currentThread.inIgnoredSection) {
+        currentThread.inIgnoredSection = true
+        try {
+            block()
+        } finally {
+            currentThread.inIgnoredSection = false
+        }
+    } else {
+        block()
+    }
 
 internal const val LINCHECK_PACKAGE_NAME = "org.jetbrains.kotlinx.lincheck."
